ci(release): Default to "snapshot" Release
This provides less trash, when it fails. Thus, any "real" release should
be decided and not triggered by accident.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,13 +6,13 @@ on:
       release_type:
         description: "Release type."
         required: true
-        default: "patch"
+        default: "snapshot"
         type: choice
         options:
+          - snapshot
           - major
           - minor
           - patch
-          - snapshot
       verbose:
         description: "If to output a summary."
         required: false
@@ -23,7 +23,7 @@ on:
       release_type:
         description: "Release type."
         required: true
-        default: "patch"
+        default: "snapshot"
         type: string
       verbose:
         description: "If to output a summary."
