ci(release): Output Retrieved JSON Result
I see some issues with parsing the JSON as it is generated by
release.sh.

With the given output, I hope to understand somewhat better, what
the possible issue is.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -145,6 +145,8 @@ jobs:
         run: |
           result="$(${{ env.SCRIPT_RELEASE }} --type "${{ env.RELEASE_TYPE }}" --push --json)"
 
+          echo -e "Going to parse data from result into variables:\n${result}"
+
           project="$(jq --raw-output '.project' <<< '${result}')"
           artifact="$(jq --raw-output '.artifact' <<< '${result}')"
           currentVersion="$(jq --raw-output '.current.version' <<< '${result}')"
