--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gest-hh-neve-child-theme",
-  "version": "1.1.11-rc.1",
+  "version": "1.2.0",
   "description": "",
   "main": "index.js",
   "engines": {
