--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -179,6 +179,9 @@ jobs:
           echo "releaseDiff=${releaseDiff}" >> $GITHUB_OUTPUT
           echo "nextVersion=${nextVersion}" >> $GITHUB_OUTPUT
           echo "nextHash=${nextHash}" >> $GITHUB_OUTPUT
+
+          echo "Done parsing data from result into variables."
+          echo "Resolved artifact path: ${artifactPath}"
       - id: gh-release
         if: ${{ inputs.release_type != 'snapshot' }}
         name: "GitHub: Create Release"
