--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gest-hh-neve-child-theme",
-  "version": "1.3.1-rc.6",
+  "version": "1.4.0",
   "description": "",
   "main": "index.js",
   "engines": {
