--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gest-hh-neve-child-theme",
+  "name": "gest-hh-neve-child",
   "version": "1.4.1-rc.4",
   "description": "",
   "main": "index.js",
