chore: release patch: v1.4.1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gest-hh-neve-child",
-  "version": "1.4.1-rc.6",
+  "version": "1.4.1",
   "description": "",
   "main": "index.js",
   "engines": {
