chore: next snapshot version: v1.4.2-rc.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gest-hh-neve-child",
-  "version": "1.4.1",
+  "version": "1.4.2-rc.0",
   "description": "",
   "main": "index.js",
   "engines": {
