--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gest-hh-neve-child",
-  "version": "1.4.2",
+  "version": "1.4.3-rc.0",
   "description": "",
   "main": "index.js",
   "engines": {
